# schemaregistry

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint-and-precommit.yml  publish.yml
