[project]
name = "structregistry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sergey Silaev", email = "hello@8am.dev" }
]
license = "MIT"
requires-python = ">=3.10"

keywords = [
    "python",
    "tool",
    "python310",
    "python311",
    "python312",
    "python313",
]

dependencies = []


[project.urls]
"Source code" = "https://github.com/sesav/structregistry"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
